--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 ---
-version: "3.8"
+version: "3"
 services:
   tomcat:
     image: tomcat:jre8-alpine
     volumes:
       webapps:/usr/local/tomcat/webapps
     restart: on-failure
+    ports: 8080:8080
 # Don't declare depends_on because the worst that can happen before build is ready is a 404
 
   compile:
