Further volumes syntax fixes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: tomcat:jre8-alpine
     volumes:
       - type: "volume"
-      - source: "webapps"
-      - target: "/usr/local/tomcat/webapps"
+        source: "webapps"
+        target: "/usr/local/tomcat/webapps"
     restart: on-failure
     ports:
       - "8080:8080"
@@ -18,8 +18,8 @@ services:
       dockerfile: compile.Dockerfile
     volumes:
       - type: "volume"
-      - source: "webapps"
-      - target: "/usr/local/tomcat/webapps"
+        source: "webapps"
+        target: "/usr/local/tomcat/webapps"
     restart: on-failure
 
 volumes:
