--- a/Config.properties
+++ b/Config.properties
@@ -1,5 +1,5 @@
 app42.paas.db.username = "root"
-app42.paas.db.port = "33060"
+app42.paas.db.port = "3306"
 app42.paas.db.password = "2hostdb"
-app42.paas.db.ip = "127.0.0.1"
+app42.paas.db.ip = "db"
 app42.paas.db.name = "shephertz"
